update css theme name an author

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: AMT-Spice
-Theme URI: https://africamediatrust.org
+Theme Name: AMT-Spice-MASTE
+Theme URI: https://africamedia.org
 Author: Africa Media Trust
-Author URI: https://africamediatrust.org
+Author URI: https://africamedia.org
 Description: A custom WordPress theme for Africa Media Trust with full customizer support.
 Version: 1.0
 License: GNU General Public License v2 or later
